@@ -1,6 +1,7 @@
 Revision history for HTTP-Daemon
 
 {{$NEXT}}
+    - Use GH Perl helpers for build and coverage jobs (GH#53) (Olaf Alders)
 
 6.13      2022-02-09 20:39:12Z
   - Bump minimum IO::Socket::IP version to 0.32 (GH#50) (Olaf Alders)
